--- a/dcl.init.html
+++ b/dcl.init.html
@@ -290,7 +290,7 @@ protected and private base class' members or constructors.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='aggr-2'><div class='marginalizedparent'><a class='marginalized' href='#aggr-2'>2</a></div><p ><span class='indexparent'><a class='index' id='aggregate,elements'></a></span>The <i>elements</i> of an aggregate are:
 </p><ul ><li ><p >for an array, the array elements in increasing subscript order, or
 </p></li><li ><p >for a class, the direct base classes in declaration order
-followed by the direct members in declaration order.
+followed by the direct non-static data members in declaration order.
 </p></li></ul></div><div class='para' id='aggr-3'><div class='marginalizedparent'><a class='marginalized' href='#aggr-3'>3</a></div><p >When an aggregate is initialized by an initializer list
 as specified in <a href='dcl.init.list'>[dcl.init.list]</a>,
 the elements of the initializer list are taken as initializers
@@ -363,8 +363,9 @@ since no size was specified and there are three initializers.
 An empty initializer list
 <span class='texttt'>{}</span>
 shall not be used as the <i ><a href='dcl.init#nt:initializer-clause'>initializer-clause</a></i>
-for an array of unknown bound.<a class='footnotenum' href='#footnote-104'>104</a></p></div><div class='para' id='aggr-6'><div class='marginalizedparent'><a class='marginalized' href='#aggr-6'>6</a></div><p >Static data members and anonymous bit-fields are not considered
-members of the class for purposes of aggregate initialization.
+for an array of unknown bound.<a class='footnotenum' href='#footnote-104'>104</a></p></div><div class='para' id='aggr-6'><div class='marginalizedparent'><a class='marginalized' href='#aggr-6'>6</a></div><p >[&nbsp;<i>Note:</i><span class='space'></span>
+Static data members and unnamed bit-fields are not considered
+elements of the aggregate for purposes of aggregate initialization.
 [&nbsp;<i>Example:</i><span class='space'></span></p><pre class='codeblock'>
 struct A {
   int i;
@@ -377,12 +378,13 @@ struct A {
 <span class='texttt'>a.j</span>
 and not the static data member
 <span class='texttt'>A::s</span>, and the third initializer 3 initializes <span class='texttt'>a.k</span>
-and not the anonymous bit-field before it.
-<i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='aggr-7'><div class='marginalizedparent'><a class='marginalized' href='#aggr-7'>7</a></div><p >An
+and not the unnamed bit-field before it.
+<i>&nbsp;—&nbsp;end example</i>&nbsp;]
+<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='aggr-7'><div class='marginalizedparent'><a class='marginalized' href='#aggr-7'>7</a></div><p >An
 <i ><a href='dcl.init#nt:initializer-list'>initializer-list</a></i>
 is ill-formed if the number of
 <i ><a href='dcl.init#nt:initializer-clause'>initializer-clauses</a></i> 
-exceeds the number of members or elements to initialize.
+exceeds the number of elements to initialize.
 [&nbsp;<i>Example:</i><span class='space'></span></p><pre class='codeblock'>
 char cv[4] = { 'a', 's', 'd', 'f', 0 };     <span class='comment'>// error
 </span></pre><p >is ill-formed.
