--- a/rand.html
+++ b/rand.html
@@ -2288,7 +2288,7 @@ public:
 </pre><p ><span class='indexparent'><a class='index' id='exponential_distribution,constructor'></a></span><code class='itemdecl'>
 explicit exponential_distribution(RealType lambda = 1.0);
 </code></p></div><div class='itemdescr'></div><div class='para' id='dist.pois.exp-2'><div class='marginalizedparent'><a class='marginalized' href='#dist.pois.exp-2'>2</a></div><div class='itemdescr'><p ><i>Requires:</i>
- <span class='math'> 0 &lt; <span class='texttt'>lambda</span> </span>.</p></div></div><div class='para' id='dist.pois.exp-3'><div class='marginalizedparent'><a class='marginalized' href='#dist.pois.exp-3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i> Constructs a <span class='texttt'>exponential_distribution</span> object;
+ <span class='math'> 0 &lt; <span class='texttt'>lambda</span> </span>.</p></div></div><div class='para' id='dist.pois.exp-3'><div class='marginalizedparent'><a class='marginalized' href='#dist.pois.exp-3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i> Constructs an <span class='texttt'>exponential_distribution</span> object;
  <span class='texttt'>lambda</span>
  corresponds to the parameter of the distribution.
 </p></div></div><p ><span class='indexparent'><a class='index' id='lambda,exponential_distribution'></a></span><span class='indexparent'><a class='index' id='exponential_distribution,lambda'></a></span><code class='itemdecl'>
