--- a/streambuf.virt.put.html
+++ b/streambuf.virt.put.html
@@ -11,7 +11,7 @@ a call to
 <span class='texttt'>sputc(c)</span>
 would return
 <span class='texttt'>traits::eof()</span>.
-Is is unspecified whether the function calls <span class='texttt'>overflow()</span> when <span class='texttt'>pptr() == epptr()</span> becomes true or whether it achieves the same effects by other means.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
+It is unspecified whether the function calls <span class='texttt'>overflow()</span> when <span class='texttt'>pptr() == epptr()</span> becomes true or whether it achieves the same effects by other means.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
 The number of characters written.
 </p></div></div><p ><span class='indexparent'><a class='index' id='overflow,basic_streambuf'></a></span><span class='indexparent'><a class='index' id='basic_streambuf,overflow'></a></span><code class='itemdecl'>
 int_type overflow(int_type c = traits::eof());
