--- a/temp.html
+++ b/temp.html
@@ -2051,7 +2051,7 @@ void h(int i) {
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div></div><div id='alias'><h3 ><a class='secnum' href='#alias' style='min-width:103pt'>14.5.7</a> Alias templates <a class='abbr_ref' href='temp.alias'>[temp.alias]</a></h3><div class='para' id='alias-1'><div class='marginalizedparent'><a class='marginalized' href='#alias-1'>1</a></div><p >A <i ><a href='temp#nt:template-declaration'>template-declaration</a></i> in which the <i ><a href='dcl.dcl#nt:declaration'>declaration</a></i> is an
 <i ><a href='dcl.dcl#nt:alias-declaration'>alias-declaration</a></i> (Clause <a href='dcl.dcl'>[dcl.dcl]</a>) declares the
-<i ><a href='lex.name#nt:identifier'>identifier</a></i> to be a <a id='alias_template'><i>alias template</i></a>.
+<i ><a href='lex.name#nt:identifier'>identifier</a></i> to be an <a id='alias_template'><i>alias template</i></a>.
 An alias template is a name for a family of
 types. The name of the alias template is a <i ><a href='temp.names#nt:template-name'>template-name</a></i>.</p></div><div class='para' id='alias-2'><div class='marginalizedparent'><a class='marginalized' href='#alias-2'>2</a></div><p >When a <i ><a href='temp.names#nt:template-id'>template-id</a></i> refers to the specialization of
 an alias template, it is equivalent to the associated type obtained by
