--- a/container.requirements.html
+++ b/container.requirements.html
@@ -986,7 +986,7 @@ and <span class='texttt'>nh</span> denotes a non-const rvalue of type <span clas
 <span class='endhead'></span><span class='texttt'>X::key_type</span>     </td><td class='left'>
  <span class='texttt'>Key</span>            </td><td class='left'>
                         </td><td class='left'>
-  compile time </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>mapped_type</span> (<span class='texttt'>map</span> and <span class='texttt'>multimap</span> only) </td><td class='left'>
+  compile time </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>X::mapped_type</span> (<span class='texttt'>map</span> and <span class='texttt'>multimap</span> only) </td><td class='left'>
   <span class='texttt'>T</span>             </td><td class='left'>
                         </td><td class='left'>
   compile time          </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>X::value_type</span> (<span class='texttt'>set</span> and <span class='texttt'>multiset</span> only) </td><td class='left'>
