--- a/iterator.range.html
+++ b/iterator.range.html
@@ -2,7 +2,7 @@
 the function templates in <a href='iterator.range'>[iterator.range]</a> are available when any of the following
 headers are included: <span class='texttt'>&lt;array&gt;</span>, <span class='texttt'>&lt;deque&gt;</span>, <span class='texttt'>&lt;forward_list&gt;</span>,
 <span class='texttt'>&lt;list&gt;</span>, <span class='texttt'>&lt;map&gt;</span>, <span class='texttt'>&lt;regex&gt;</span>, <span class='texttt'>&lt;set&gt;</span>, <span class='texttt'>&lt;string&gt;</span>,
-<span class='texttt'>&lt;unordered_map&gt;</span>, <span class='texttt'>&lt;unordered_set&gt;</span>, and <span class='texttt'>&lt;vector&gt;</span>.</p><p ><span class='indexparent'><a class='index' id='begin(C&)'></a></span><code class='itemdecl'>
+<span class='texttt'>&lt;string_view&gt;</span>, <span class='texttt'>&lt;unordered_map&gt;</span>, <span class='texttt'>&lt;unordered_set&gt;</span>, and <span class='texttt'>&lt;vector&gt;</span>.</p><p ><span class='indexparent'><a class='index' id='begin(C&)'></a></span><code class='itemdecl'>
 template &lt;class C&gt; constexpr auto begin(C&amp; c) -&gt; decltype(c.begin());
 template &lt;class C&gt; constexpr auto begin(const C&amp; c) -&gt; decltype(c.begin());
 </code></p></div><div class='itemdescr'></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>c.begin()</span>.
