--- a/iterator.synopsis.html
+++ b/iterator.synopsis.html
@@ -3,6 +3,7 @@ namespace std {
   <span class='comment'>// <a href='iterator.primitives'>[iterator.primitives]</a>, primitives:
 </span>  template&lt;class Iterator&gt; struct iterator_traits;
   template&lt;class T&gt; struct iterator_traits&lt;T*&gt;;
+  template&lt;class T&gt; struct iterator_traits&lt;const T*&gt;;
 
   struct input_iterator_tag { };
   struct output_iterator_tag { };
