--- a/stmt.stmt.html
+++ b/stmt.stmt.html
@@ -235,10 +235,7 @@ while (--x &gt;= 0) {
   int i;
 }
 </pre></div><div class='para' id='stmt.iter-3'><div class='marginalizedparent'><a class='marginalized' href='#stmt.iter-3'>3</a></div><p >Thus after the <span class='texttt'>while</span> statement, <span class='texttt'>i</span> is no longer in scope.
-<i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='stmt.iter-4'><div class='marginalizedparent'><a class='marginalized' href='#stmt.iter-4'>4</a></div><p >[&nbsp;<i>Note:</i><span class='space'></span>
-The requirements on <i ><a href='stmt.stmt#nt:condition'>conditions</a></i> in iteration statements are
-described in <a href='stmt.select'>[stmt.select]</a>.
-<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div id='stmt.while'><h3 ><a class='secnum' href='#stmt.while' style='min-width:103pt'>6.5.1</a> The <span class='texttt'>while</span> statement <a class='abbr_ref' href='stmt.while'>[stmt.while]</a></h3><p ><span class='indexparent'><a class='index' id='statement,while'></a></span></p><div class='para' id='stmt.while-1'><div class='marginalizedparent'><a class='marginalized' href='#stmt.while-1'>1</a></div><p >In the <span class='texttt'>while</span> statement the substatement is executed repeatedly
+<i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div id='stmt.while'><h3 ><a class='secnum' href='#stmt.while' style='min-width:103pt'>6.5.1</a> The <span class='texttt'>while</span> statement <a class='abbr_ref' href='stmt.while'>[stmt.while]</a></h3><p ><span class='indexparent'><a class='index' id='statement,while'></a></span></p><div class='para' id='stmt.while-1'><div class='marginalizedparent'><a class='marginalized' href='#stmt.while-1'>1</a></div><p >In the <span class='texttt'>while</span> statement the substatement is executed repeatedly
 until the value of the condition (<a href='stmt.select'>[stmt.select]</a>) becomes
 <span class='texttt'>false</span>. The test takes place before each execution of the
 substatement.</p></div><div class='para' id='stmt.while-2'><div class='marginalizedparent'><a class='marginalized' href='#stmt.while-2'>2</a></div><p ><span class='indexparent'><a class='index' id='statement,declaration_in_while'></a></span>When the condition of a <span class='texttt'>while</span> statement is a declaration, the scope of
