--- a/syntax.html
+++ b/syntax.html
@@ -16,6 +16,6 @@ determines its meaning (e.g., <i ><a href='class#nt:class-name'>class-name</a></
 delimiters (e.g., <i ><a href='dcl.dcl#nt:declaration-seq'>declaration-seq</a></i> is a sequence of
 declarations).
 </p></li><li ><p ><span class='grammarterm'>X-list</span> is one or more <span class='grammarterm'>X</span>'s separated by
-intervening commas (e.g., <i ><a href='expr.post#nt:expression-list'>expression-list</a></i> is a sequence of
-expressions separated by commas).
+intervening commas (e.g., <i ><a href='cpp#nt:identifier-list'>identifier-list</a></i> is a sequence of
+identifiers separated by commas).
 </p></li></ul><p ><span class='indexparent'><a class='index' id='notation,syntax'></a></span></p></div></div></div></body></html>
