--- a/intro.html
+++ b/intro.html
@@ -176,8 +176,8 @@ determines its meaning (e.g., <i ><a href='class#nt:class-name'>class-name</a></
 delimiters (e.g., <i ><a href='dcl.dcl#nt:declaration-seq'>declaration-seq</a></i> is a sequence of
 declarations).
 </p></li><li ><p ><span class='grammarterm'>X-list</span> is one or more <span class='grammarterm'>X</span>'s separated by
-intervening commas (e.g., <i ><a href='expr.post#nt:expression-list'>expression-list</a></i> is a sequence of
-expressions separated by commas).
+intervening commas (e.g., <i ><a href='cpp#nt:identifier-list'>identifier-list</a></i> is a sequence of
+identifiers separated by commas).
 </p></li></ul><p ><span class='indexparent'><a class='index' id='notation,syntax'></a></span></p></div></div><div id='memory'><h2 ><a class='secnum' href='#memory' style='min-width:88pt'>1.7</a> The C++ memory model <a class='abbr_ref' href='intro.memory'>[intro.memory]</a></h2><div class='para' id='memory-1'><div class='marginalizedparent'><a class='marginalized' href='#memory-1'>1</a></div><p ><span class='indexparent'><a class='index' id='memory_model'></a></span>The fundamental storage unit in the C++ memory model is the
 <a id='byte'><i>byte</i></a>.
 A byte is at least large enough to contain any member of the basic
