--- a/iterators.html
+++ b/iterators.html
@@ -435,6 +435,7 @@ namespace std {
   <span class='comment'>// <a href='iterator.primitives'>[iterator.primitives]</a>, primitives:
 </span>  template&lt;class Iterator&gt; struct iterator_traits;
   template&lt;class T&gt; struct iterator_traits&lt;T*&gt;;
+  template&lt;class T&gt; struct iterator_traits&lt;const T*&gt;;
 
   struct input_iterator_tag { };
   struct output_iterator_tag { };
@@ -1912,7 +1913,7 @@ otherwise.
 the function templates in <a href='iterator.range'>[iterator.range]</a> are available when any of the following
 headers are included: <span class='texttt'>&lt;array&gt;</span>, <span class='texttt'>&lt;deque&gt;</span>, <span class='texttt'>&lt;forward_list&gt;</span>,
 <span class='texttt'>&lt;list&gt;</span>, <span class='texttt'>&lt;map&gt;</span>, <span class='texttt'>&lt;regex&gt;</span>, <span class='texttt'>&lt;set&gt;</span>, <span class='texttt'>&lt;string&gt;</span>,
-<span class='texttt'>&lt;unordered_map&gt;</span>, <span class='texttt'>&lt;unordered_set&gt;</span>, and <span class='texttt'>&lt;vector&gt;</span>.</p><p ><span class='indexparent'><a class='index' id='begin(C&)'></a></span><code class='itemdecl'>
+<span class='texttt'>&lt;string_view&gt;</span>, <span class='texttt'>&lt;unordered_map&gt;</span>, <span class='texttt'>&lt;unordered_set&gt;</span>, and <span class='texttt'>&lt;vector&gt;</span>.</p><p ><span class='indexparent'><a class='index' id='begin(C&)'></a></span><code class='itemdecl'>
 template &lt;class C&gt; constexpr auto begin(C&amp; c) -&gt; decltype(c.begin());
 template &lt;class C&gt; constexpr auto begin(const C&amp; c) -&gt; decltype(c.begin());
 </code></p></div><div class='itemdescr'></div><div class='para' id='iterator.range-2'><div class='marginalizedparent'><a class='marginalized' href='#iterator.range-2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>c.begin()</span>.
