--- a/execution.syn.html
+++ b/execution.syn.html
@@ -12,7 +12,7 @@ namespace std::execution {
   <span class='comment'>// <a href='execpol.par'>[execpol.par]</a>, parallel execution policy:
 </span>  class parallel_policy;
 
-  <span class='comment'>// <a href='execpol.vec'>[execpol.vec]</a>, parallel+unsequenced execution policy:
+  <span class='comment'>// <a href='execpol.parunseq'>[execpol.parunseq]</a>, parallel+unsequenced execution policy:
 </span>  class parallel_unsequenced_policy;
 
   <span class='comment'>// <a href='parallel.execpol.objects'>[parallel.execpol.objects]</a>, execution policy objects:
