--- a/expr.delete.html
+++ b/expr.delete.html
@@ -10,8 +10,7 @@ class type, the operand is contextually implicitly converted
 (Clause <a href='conv'>[conv]</a>) to a pointer to object
 type.<a class='footnotenum' href='#footnote-81'>81</a>
 The <i ><a href='expr.delete#nt:delete-expression'>delete-expression</a></i>'s result has type
-<span class='texttt'>void</span>.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p ><span class='indexparent'><a class='index' id='delete,object'></a></span>
-If the operand has a class type, the operand is converted to a pointer
+<span class='texttt'>void</span>.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p ><span class='indexparent'><a class='index' id='delete,object'></a></span>If the operand has a class type, the operand is converted to a pointer
 type by calling the above-mentioned conversion function, and the
 converted operand is used in place of the original operand for the
 remainder of this section.
