--- a/expr.eq.html
+++ b/expr.eq.html
@@ -6,7 +6,7 @@ group left-to-right. The operands shall have arithmetic, enumeration, pointer,
 or pointer to member type, or type <span class='texttt'>std::nullptr_t</span>. The operators
 <span class='texttt'>==</span> and <span class='texttt'>!=</span> both yield <span class='texttt'>true</span> or <span class='texttt'>false</span>, i.e., a
 result of type <span class='texttt'>bool</span>. In each case below, the operands shall have the
-same type after the specified conversions have been applied.</p><p ><span class='indexparent'><a class='index' id='comparison,pointer'></a></span><span class='indexparent'><a class='index' id='comparison,pointer_to_function'></a></span></p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >If at least one of the operands is a pointer,
+same type after the specified conversions have been applied.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p ><span class='indexparent'><a class='index' id='comparison,pointer'></a></span><span class='indexparent'><a class='index' id='comparison,pointer_to_function'></a></span>If at least one of the operands is a pointer,
 pointer conversions (<a href='conv.ptr'>[conv.ptr]</a>),
 function pointer conversions (<a href='conv.fctptr'>[conv.fctptr]</a>), and
 qualification conversions (<a href='conv.qual'>[conv.qual]</a>)
