--- a/expr.html
+++ b/expr.html
@@ -1133,8 +1133,7 @@ the <a id='promotion,default_argument_promotion'><i>default argument promotions<
 function (<a href='basic.start.main'>[basic.start.main]</a>).</p></div><div class='para' id='call-11'><div class='marginalizedparent'><a class='marginalized' href='#call-11'>11</a></div><p >A function call is an lvalue
 if the result type is an lvalue reference type or an rvalue reference to function type,
 an xvalue if the result type is an rvalue reference to object type, and a prvalue
-otherwise.</p></div></div><div id='type.conv'><h3 ><a class='secnum' href='#type.conv' style='min-width:103pt'>5.2.3</a> Explicit type conversion (functional notation) <a class='abbr_ref' href='expr.type.conv'>[expr.type.conv]</a></h3><div class='para' id='type.conv-1'><div class='marginalizedparent'><a class='marginalized' href='#type.conv-1'>1</a></div><p ><span class='indexparent'><a class='index' id='expression,cast'></a></span>
-<span class='indexparent'><a class='index' id='explicit_type_conversion'></a></span><span class='indexparent'><a class='index' id='type_conversion,_explicit'></a></span><span class='indexparent'><a class='index' id='conversion_explicit_type'></a></span><span class='indexparent'><a class='index' id='casting'></a></span>A <i ><a href='dcl.type.simple#nt:simple-type-specifier'>simple-type-specifier</a></i> (<a href='dcl.type.simple'>[dcl.type.simple]</a>) or
+otherwise.</p></div></div><div id='type.conv'><h3 ><a class='secnum' href='#type.conv' style='min-width:103pt'>5.2.3</a> Explicit type conversion (functional notation) <a class='abbr_ref' href='expr.type.conv'>[expr.type.conv]</a></h3><div class='para' id='type.conv-1'><div class='marginalizedparent'><a class='marginalized' href='#type.conv-1'>1</a></div><p ><span class='indexparent'><a class='index' id='expression,cast'></a></span><span class='indexparent'><a class='index' id='explicit_type_conversion'></a></span><span class='indexparent'><a class='index' id='type_conversion,_explicit'></a></span><span class='indexparent'><a class='index' id='conversion_explicit_type'></a></span><span class='indexparent'><a class='index' id='casting'></a></span>A <i ><a href='dcl.type.simple#nt:simple-type-specifier'>simple-type-specifier</a></i> (<a href='dcl.type.simple'>[dcl.type.simple]</a>) or
 <i ><a href='temp.res#nt:typename-specifier'>typename-specifier</a></i> (<a href='temp.res'>[temp.res]</a>) followed
 by a parenthesized optional <i ><a href='expr.post#nt:expression-list'>expression-list</a></i> or
 by a <i ><a href='dcl.init#nt:braced-init-list'>braced-init-list</a></i>
@@ -1165,8 +1164,7 @@ for some invented variable <span class='texttt'>t</span>.
 Define <span class='texttt'>U</span> to be <span class='texttt'>decltype(t)</span>,
 then the expression <span class='texttt'>T(x1, x2, ...)</span>
 is equivalent to
-the expression <span class='texttt'>U(x1, x2, ...)</span>.</p></div></div><div id='pseudo'><h3 ><a class='secnum' href='#pseudo' style='min-width:103pt'>5.2.4</a> Pseudo destructor call <a class='abbr_ref' href='expr.pseudo'>[expr.pseudo]</a></h3><div class='para' id='pseudo-1'><div class='marginalizedparent'><a class='marginalized' href='#pseudo-1'>1</a></div><p ><span class='indexparent'><a class='index' id='expression,pseudo-destructor_call'></a></span>
-<span class='indexparent'><a class='index' id='call,pseudo_destructor'></a></span><span class='indexparent'><a class='index' id='pseudo-destructor-name'></a></span>The use of a <i ><a href='expr.post#nt:pseudo-destructor-name'>pseudo-destructor-name</a></i> after a dot <span class='texttt'>.</span> or
+the expression <span class='texttt'>U(x1, x2, ...)</span>.</p></div></div><div id='pseudo'><h3 ><a class='secnum' href='#pseudo' style='min-width:103pt'>5.2.4</a> Pseudo destructor call <a class='abbr_ref' href='expr.pseudo'>[expr.pseudo]</a></h3><div class='para' id='pseudo-1'><div class='marginalizedparent'><a class='marginalized' href='#pseudo-1'>1</a></div><p ><span class='indexparent'><a class='index' id='expression,pseudo-destructor_call'></a></span><span class='indexparent'><a class='index' id='call,pseudo_destructor'></a></span><span class='indexparent'><a class='index' id='pseudo-destructor-name'></a></span>The use of a <i ><a href='expr.post#nt:pseudo-destructor-name'>pseudo-destructor-name</a></i> after a dot <span class='texttt'>.</span> or
 arrow <span class='texttt'>-&gt;</span> operator represents the destructor for the non-class
 type denoted by <i ><a href='dcl.type.simple#nt:type-name'>type-name</a></i> or <i ><a href='dcl.type.simple#nt:decltype-specifier'>decltype-specifier</a></i>.
 The result shall only be used as the
@@ -2274,8 +2272,7 @@ class type, the operand is contextually implicitly converted
 (Clause <a href='conv'>[conv]</a>) to a pointer to object
 type.<a class='footnotenum' href='#footnote-81'>81</a>
 The <i ><a href='expr.delete#nt:delete-expression'>delete-expression</a></i>'s result has type
-<span class='texttt'>void</span>.</p></div><div class='para' id='delete-2'><div class='marginalizedparent'><a class='marginalized' href='#delete-2'>2</a></div><p ><span class='indexparent'><a class='index' id='delete,object'></a></span>
-If the operand has a class type, the operand is converted to a pointer
+<span class='texttt'>void</span>.</p></div><div class='para' id='delete-2'><div class='marginalizedparent'><a class='marginalized' href='#delete-2'>2</a></div><p ><span class='indexparent'><a class='index' id='delete,object'></a></span>If the operand has a class type, the operand is converted to a pointer
 type by calling the above-mentioned conversion function, and the
 converted operand is used in place of the original operand for the
 remainder of this section.
@@ -2656,7 +2653,7 @@ group left-to-right. The operands shall have arithmetic, enumeration, pointer,
 or pointer to member type, or type <span class='texttt'>std::nullptr_t</span>. The operators
 <span class='texttt'>==</span> and <span class='texttt'>!=</span> both yield <span class='texttt'>true</span> or <span class='texttt'>false</span>, i.e., a
 result of type <span class='texttt'>bool</span>. In each case below, the operands shall have the
-same type after the specified conversions have been applied.</p><p ><span class='indexparent'><a class='index' id='comparison,pointer'></a></span><span class='indexparent'><a class='index' id='comparison,pointer_to_function'></a></span></p></div><div class='para' id='eq-2'><div class='marginalizedparent'><a class='marginalized' href='#eq-2'>2</a></div><p >If at least one of the operands is a pointer,
+same type after the specified conversions have been applied.</p></div><div class='para' id='eq-2'><div class='marginalizedparent'><a class='marginalized' href='#eq-2'>2</a></div><p ><span class='indexparent'><a class='index' id='comparison,pointer'></a></span><span class='indexparent'><a class='index' id='comparison,pointer_to_function'></a></span>If at least one of the operands is a pointer,
 pointer conversions (<a href='conv.ptr'>[conv.ptr]</a>),
 function pointer conversions (<a href='conv.fctptr'>[conv.fctptr]</a>), and
 qualification conversions (<a href='conv.qual'>[conv.qual]</a>)
