--- a/re.syn.html
+++ b/re.syn.html
@@ -2,12 +2,13 @@
 #include &lt;initializer_list&gt;
 
 namespace std {
-
   <span class='comment'>// <a href='re.const'>[re.const]</a>, regex constants:
 </span>  namespace regex_constants {
-    enum error_type;
-  } <span class='comment'>// namespace regex_constants
-</span>
+    using syntax_option_type = <i>T1</i>;
+    using match_flag_type = <i>T2</i>;
+    using error_type = <i>T3</i>;
+  }
+
   <span class='comment'>// <a href='re.badexp'>[re.badexp]</a>, class regex_error:
 </span>  class regex_error;
 
@@ -15,7 +16,7 @@ namespace std {
 </span>  template &lt;class charT&gt; struct regex_traits;
 
   <span class='comment'>// <a href='re.regex'>[re.regex]</a>, class template basic_regex:
-</span>  template &lt;class charT, class traits = regex_traits&lt;charT&gt; &gt; class basic_regex;
+</span>  template &lt;class charT, class traits = regex_traits&lt;charT&gt;&gt; class basic_regex;
 
   using regex  = basic_regex&lt;char&gt;;
   using wregex = basic_regex&lt;wchar_t&gt;;
@@ -46,7 +47,6 @@ namespace std {
     bool operator&gt;=(const sub_match&lt;BiIter&gt;&amp; lhs, const sub_match&lt;BiIter&gt;&amp; rhs);
   template &lt;class BiIter&gt;
     bool operator&gt;(const sub_match&lt;BiIter&gt;&amp; lhs, const sub_match&lt;BiIter&gt;&amp; rhs);
-
 
   template &lt;class BiIter, class ST, class SA&gt; 
     bool operator==(
@@ -192,7 +192,7 @@ namespace std {
 
   <span class='comment'>// <a href='re.results'>[re.results]</a>, class template match_results:
 </span>  template &lt;class BidirectionalIterator,
-            class Allocator = allocator&lt;sub_match&lt;BidirectionalIterator&gt; &gt; &gt;
+            class Allocator = allocator&lt;sub_match&lt;BidirectionalIterator&gt;&gt;&gt;
     class match_results;
 
   using cmatch  = match_results&lt;const char*&gt;;
@@ -202,11 +202,11 @@ namespace std {
 
   <span class='comment'>// match_results comparisons
 </span>  template &lt;class BidirectionalIterator, class Allocator&gt;
-    bool operator== (const match_results&lt;BidirectionalIterator, Allocator&gt;&amp; m1,
-                     const match_results&lt;BidirectionalIterator, Allocator&gt;&amp; m2);
+    bool operator==(const match_results&lt;BidirectionalIterator, Allocator&gt;&amp; m1,
+                    const match_results&lt;BidirectionalIterator, Allocator&gt;&amp; m2);
   template &lt;class BidirectionalIterator, class Allocator&gt;
-    bool operator!= (const match_results&lt;BidirectionalIterator, Allocator&gt;&amp; m1,
-                     const match_results&lt;BidirectionalIterator, Allocator&gt;&amp; m2);
+    bool operator!=(const match_results&lt;BidirectionalIterator, Allocator&gt;&amp; m1,
+                    const match_results&lt;BidirectionalIterator, Allocator&gt;&amp; m2);
 
   <span class='comment'>// <a href='re.results.swap'>[re.results.swap]</a>, match_results swap:
 </span>  template &lt;class BidirectionalIterator, class Allocator&gt;
@@ -357,7 +357,7 @@ namespace std {
 </span>  template &lt;class BidirectionalIterator, 
             class charT = typename iterator_traits&lt;
               BidirectionalIterator&gt;::value_type,
-            class traits = regex_traits&lt;charT&gt; &gt;
+            class traits = regex_traits&lt;charT&gt;&gt;
     class regex_iterator;
 
   using cregex_iterator  = regex_iterator&lt;const char*&gt;;
@@ -369,7 +369,7 @@ namespace std {
 </span>  template &lt;class BidirectionalIterator, 
             class charT = typename iterator_traits&lt;
               BidirectionalIterator&gt;::value_type,
-            class traits = regex_traits&lt;charT&gt; &gt;
+            class traits = regex_traits&lt;charT&gt;&gt;
     class regex_token_iterator;
 
   using cregex_token_iterator  = regex_token_iterator&lt;const char*&gt;;
