--- a/temp.fct.html
+++ b/temp.fct.html
@@ -18,14 +18,14 @@ If such a non-template function is odr-used (<a href='basic.def.odr'>[basic.def.
 it will not be implicitly instantiated using the function template definition.</p></div><div id='temp.over.link'><h4 ><a class='secnum' href='#temp.over.link' style='min-width:118pt'>14.5.6.1</a> Function template overloading <a class='abbr_ref' href='temp.over.link'>[temp.over.link]</a></h4><div class='para' id='temp.over.link-1'><div class='marginalizedparent'><a class='marginalized' href='#temp.over.link-1'>1</a></div><p ><span class='indexparent'><a class='index' id='overloading'></a></span>It is possible to overload function templates so that two different
 function template specializations have the same type.
 [&nbsp;<i>Example:</i><span class='space'></span></p><div class='minipage'><pre class='codeblock'>
-<span class='comment'>// file1.c
+<span class='comment'>// translation unit 1:
 </span>template&lt;class T&gt;
   void f(T*);
 void g(int* p) {
   f(p); <span class='comment'>// calls <span class='texttt'>f&lt;int&gt;(int*)</span>
 </span>}
 </pre></div><div class='minipage'><pre class='codeblock'>
-<span class='comment'>// file2.c
+<span class='comment'>// translation unit 2:
 </span>template&lt;class T&gt;
   void f(T);
 void h(int* p) {
