--- a/temp.over.link.html
+++ b/temp.over.link.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><html lang='en'><head><title>[temp.over.link]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>14</a> Templates <a class='abbr_ref' href='./#temp'>[temp]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>14.5</a> Template declarations <a class='abbr_ref' href='temp.decls#temp.over.link'>[temp.decls]</a></h2><h3 ><a class='secnum' style='min-width:103pt'>14.5.6</a> Function templates <a class='abbr_ref' href='temp.fct#temp.over.link'>[temp.fct]</a></h3><div id='temp.over.link'><h4 ><a class='secnum' style='min-width:118pt'>14.5.6.1</a> Function template overloading <a class='abbr_ref'>[temp.over.link]</a></h4><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p ><span class='indexparent'><a class='index' id='overloading'></a></span>It is possible to overload function templates so that two different
 function template specializations have the same type.
 [&nbsp;<i>Example:</i><span class='space'></span></p><div class='minipage'><pre class='codeblock'>
-<span class='comment'>// file1.c
+<span class='comment'>// translation unit 1:
 </span>template&lt;class T&gt;
   void f(T*);
 void g(int* p) {
   f(p); <span class='comment'>// calls <span class='texttt'>f&lt;int&gt;(int*)</span>
 </span>}
 </pre></div><div class='minipage'><pre class='codeblock'>
-<span class='comment'>// file2.c
+<span class='comment'>// translation unit 2:
 </span>template&lt;class T&gt;
   void f(T);
 void h(int* p) {
