--- a/utilities.html
+++ b/utilities.html
@@ -9823,7 +9823,7 @@ namespace std::execution {
   <span class='comment'>// <a href='execpol.par'>[execpol.par]</a>, parallel execution policy:
 </span>  class parallel_policy;
 
-  <span class='comment'>// <a href='execpol.vec'>[execpol.vec]</a>, parallel+unsequenced execution policy:
+  <span class='comment'>// <a href='execpol.parunseq'>[execpol.parunseq]</a>, parallel+unsequenced execution policy:
 </span>  class parallel_unsequenced_policy;
 
   <span class='comment'>// <a href='parallel.execpol.objects'>[parallel.execpol.objects]</a>, execution policy objects:
@@ -9853,9 +9853,9 @@ class execution::parallel_policy { <i><span class='texttt'>unspecified</span></i
 </code></p><div class='itemdescr'></div><div class='para' id='execpol.par-1'><div class='marginalizedparent'><a class='marginalized' href='#execpol.par-1'>1</a></div><div class='itemdescr'><p >The class <span class='texttt'>execution::parallel_policy</span> is an execution policy type used as
 a unique type to disambiguate parallel algorithm overloading and indicate that
 a parallel algorithm's execution may be parallelized.
-</p></div></div></div><div id='execpol.vec'><h3 ><a class='secnum' href='#execpol.vec' style='min-width:103pt'>20.19.6</a> Parallel+Vector execution policy <a class='abbr_ref' href='execpol.vec'>[execpol.vec]</a></h3><p ><span class='indexparent'><a class='index' id='execution::parallel_unsequenced_policy'></a></span><code class='itemdecl'>
+</p></div></div></div><div id='execpol.parunseq'><h3 ><a class='secnum' href='#execpol.parunseq' style='min-width:103pt'>20.19.6</a> Parallel+Unsequenced execution policy <a class='abbr_ref' href='execpol.parunseq'>[execpol.parunseq]</a></h3><p ><span class='indexparent'><a class='index' id='execution::parallel_unsequenced_policy'></a></span><code class='itemdecl'>
 class execution::parallel_unsequenced_policy { <i><span class='texttt'>unspecified</span></i> };
-</code></p><div class='itemdescr'></div><div class='para' id='execpol.vec-1'><div class='marginalizedparent'><a class='marginalized' href='#execpol.vec-1'>1</a></div><div class='itemdescr'><p >The class <span class='texttt'>execution::parallel_unsequenced_policy</span> is an execution policy type
+</code></p><div class='itemdescr'></div><div class='para' id='execpol.parunseq-1'><div class='marginalizedparent'><a class='marginalized' href='#execpol.parunseq-1'>1</a></div><div class='itemdescr'><p >The class <span class='texttt'>execution::parallel_unsequenced_policy</span> is an execution policy type
 used as a unique type to disambiguate parallel algorithm overloading and
 indicate that a parallel algorithm's execution may be parallelized and
 vectorized.
